tests/ui/conf_french_blacklisted_name.stderr
error[E0658]: compiler plugins are experimental and possibly buggy (see issue #29597)
 --> $DIR/conf_french_blacklisted_name.rs:2:1
  |
2 | #![plugin(clippy(conf_file="../auxiliary/conf_french_blacklisted_name.toml"))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: add #![feature(plugin)] to the crate attributes to enable

error: aborting due to previous error

